# lemon

./: .credo.exs  .dockerignore  .gitignore  AGENTS.md  BEAM_AGENT_SESSIONS_PLAN.md  CHANGELOG.md  CLEANUP.md  CLEANUP_WORKLOG.md  CONFIGPLAN.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  INSPIRATION.md  JANITOR.md  LEMON_TUI_PLAN.md  LEMON_TUI_RPC_PARALLEL_SESSIONS_PLAN.md  LEMON_WEB_UI_PLAN.md  LICENSE  PR5_TELEGRAM_TRANSPORT.md  README.md  REFACTOR.md  REVIEW.md  REVIEWPLAN.md  REVIEWWORKLOG.md  ROADMAP.md  RPC_PARALLEL_SESSIONS_PLAN.md  SECURITY.md  VOICE_FIXES.md  WORKLOG.md  agent_core_plan.md  agent_core_plan_claude.md  agent_core_plan_kimi.md  ai1.md  ai2.md  archfix.md  beam_review.md  beam_subagent_architecture.md  beamupgrade.md  claude_review.md  claude_score.md  (+28 more)
clients/lemon-cli/: pyproject.toml
clients/lemon-cli/src/lemon_cli/: __main__.py  cli.py  config.py  constants.py  theme.py  types.py
clients/lemon-cli/src/lemon_cli/autocomplete/: combined.py  filepath.py  slash.py
clients/lemon-cli/src/lemon_cli/commands/: core.py  registry.py  session.py  ui.py
clients/lemon-cli/src/lemon_cli/connection/: base.py  (+3 more)
clients/lemon-cli/tests/: test_task10_ws_flags.py  test_task11_thinking_toggle.py  test_task7_launcher.py  test_task8_ws_protocol.py  test_task9_ws_scopes.py
games-platform/telethon_ping/: async_nonblock_results_1771743583.json  async_nonblock_results_1771752871.json  codex_probe.py  comprehensive_results_1771765509.json  comprehensive_test.py  engine_matrix_results_1771738521.json  engine_matrix_results_1771738910.json  engine_matrix_test.py  mega_mission_results_1771740459.json  mega_mission_results_1771740766.json  mega_mission_results_1771741071.json  mega_mission_results_1771741615.json  mega_mission_results_summary.md  mega_missions.py  pyproject.toml
games-platform/telethon_ping/telethon_ping/: __init__.py
native/lemon-wasm-runtime/: Cargo.toml
native/lemon-wasm-runtime/src/: capabilities.rs  main.rs  protocol.rs  runtime.rs
native/lemon-wasm-runtime/wit/: tool.wit
(+4329 files in other folders)
