[project]
name = "lemon-cli"
version = "0.1.0"
description = "Python TUI client for Lemon coding agent"
requires-python = ">=3.11"
dependencies = [
    "prompt-toolkit>=3.0.47",
    "rich>=13.9",
    "websockets>=13.0",
]

[project.scripts]
lemon-cli = "lemon_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemon_cli"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8",
]
