[package]
name = "lemon-wasm-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
wasmtime = { version = "28", features = ["component-model"] }
wasmtime-wasi = "28"

[dev-dependencies]
pretty_assertions = "1"
